manifests/filegator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filegator
  namespace: filegator
  labels:
    app: filegator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filegator
  template:
    metadata:
      labels:
        app: filegator
    spec:
      containers:
        - name: filegator
          image: filegator/filegator:v7.10.1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-storage
              mountPath: /shared       # Mount path inside the container
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: filegator-pvc
