manifests/filegator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filegator
  namespace: filegator
spec:
  selector:
    app: filegator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
